--- a/arch/arm64/boot/dts/rockchip/Makefile
+++ b/arch/arm64/boot/dts/rockchip/Makefile
@@ -133,6 +133,7 @@ dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3326-odroidgo2-linux-v11.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3326-odroidgo2-linux-v11-alt.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3326-odroidgo2-linux-v11-rgb10s.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3326-odroidgo3-linux.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3326-rgb10max-linux.dtb
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
